--- a/图片媒体测试.html
+++ b/图片媒体测试.html
@@ -2,5 +2,5 @@
 <head>
 <title>第一个网页</title>
 </head>
-<body> <img src="http://img3.imgtn.bdimg.com/it/u=688285134,3451247799&fm=21&gp=0.jpg"> </body>
+<body> <img src="http://pic20.nipic.com/20120429/9957421_101737681112_2.jpg"> </body>
 </html>
