--- a/图片媒体测试.html
+++ b/图片媒体测试.html
@@ -3,5 +3,5 @@
 <head>
 <title>第一个网页</title>
 </head>
-<body> <img src="http://pic20.nipic.com/20120429/9957421_101737681112_2.jpg"> </body>
+<body> <img src="http://pica.nipic.com/2008-06-25/2008625105417963_2.jpg"> </body>
 </html>
