--- a/图片媒体测试.html
+++ b/图片媒体测试.html
@@ -3,5 +3,7 @@
 <head>
 <title>第一个网页</title>
 </head>
-<body> <img src="http://www.33.la/uploads/201405sy/xiaoxi/32.jpg"> </body>
+<body> <img src="http://www.33.la/uploads/201405sy/xiaoxi/32.jpg"> 
+<embed src="tt.mp3" width="200" height="200" />
+</body>
 </html>
