--- a/index.html
+++ b/index.html
@@ -1,8 +1,46 @@
-<htlm>
+<!DOCTYPE html>
+<html>
 <head>
-<title>HELLO!é‡ç‘°åŸ„ç»¾ï¿½</title>
+<title>²ÜÀû´¿µÄ¸öÈËÖ÷Ò³</title>
+<link rel="stylesheet" type="text/css" href="css/index.css">	
 </head>
+
 <body>
-<p>æµ£çŠ²ã‚½éŸå©ç´’</p>
+
+
+<div id="top">
+	<div class="left" >
+	<img src="images/3.jpg" width="305px">
+	</div>
+	<div class="right">
+	<img src="images/1.jpg" width="100%">
+	</div>
+<div style="clear:both"/>
+</div>
+
+<div id="main">
+	<table>
+	<tr>
+	<td>
+		<ul>
+		<li><a href="resume.html" target="target_area">¸öÈË¼ò½é</a></li>
+		<li><a href="university.html" target="target_area">´óÑ§·ç¹â</a></li>
+		<li><a href="photos.html" target="target_area">Éú»îÕÕÆ¬</a></li>
+		<li><a href="books.html" target="target_area">Êéµ¥ÊéÆÀ</a></li>
+		<li><a href="music.html" target="target_area">ÎÒµÄÒôÀÖ</a></li>
+		</ul>
+	</td>
+	<td><iframe id=target_area src="resume.html"></iframe></td>
+	</tr>
+	</table>
+
+<div style="clear:both"/>
+</div>
+
+<div id="bottom">
+	<p><strong>³£ÓÃÁ´½Ó<strong> :  <a href="http://www.weibo.com/u/5611677111?refer_flag=1005050010_&is_hot=1" > ÎÒµÄÎ¢²© </a>| <a href="http://www.cumt.edu.cn" > ÎÒµÄ´óÑ§</a>  |  <a 	href="http://hao.360.cn" >360µ¼º½</a>| <a href="http://www.baidu.com"> °Ù¶È</a> </p>	
+	<p>&copy;²ÜÀû´¿</p>
+</div>
 </body>
-<htlm>
+
+</html>
