--- a/resume.html
+++ b/resume.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>¸öÈË¼ò½é</title>
+<title>ä¸ªäººç®€ä»‹</title>
 <link rel="stylesheet" type="text/css" href="css/resume.css">	
 </head>
 
 <body>
-<p style="text-align:center;font-size:60px"><b>¸öÈË¼ò½é</b></p>
+<p style="text-align:center;font-size:60px"><b>ä¸ªäººç®€ä»‹</b></p>
 <div id="top">
 	<div class="left">
-	<img src="images/2.jpg" width="100%" >
+	<img src="images/2.JPG" width="100%" >
 	</div>
 
 	<div class="right">
 	<table>
 	<tr><th>&nbsp</th><td>&nbsp</td></tr>
-	<tr><th>ÐÕÃû</th><td>²ÜÀû´¿</td></tr>
+	<tr><th>å§“å</th><td>æ›¹åˆ©çº¯</td></tr>
 	<tr><th>&nbsp</th><td>&nbsp</td></tr>	
-	<tr><th>ÄêÁä</th><td>21</td></tr>
+	<tr><th>å¹´é¾„</th><td>21</td></tr>
 	<tr><th>&nbsp</th><td>&nbsp</td></tr>
-	<tr><th>Éí¸ßÌåÖØ</th><td>&nbsp 172cm 57kg</td></tr>
+	<tr><th>èº«é«˜ä½“é‡</th><td>&nbsp 172cm 57kg</td></tr>
 	<tr><th>&nbsp</th><td>&nbsp</td></tr>
-	<tr><th>ÁªÏµ·½Ê½</th><td>&nbsp TEL:18361270363<br/>&nbsp Q:1425308023</td></tr>
+	<tr><th>è”ç³»æ–¹å¼</th><td>&nbsp TEL:18361270363<br/>&nbsp Q:1425308023</td></tr>
 	</table>
 	</div>
 	
@@ -29,11 +29,11 @@
 </div>
 
 <div id="down">
-<p><b>°®ºÃ:</b></br>ÅÜ²½¡¢ÔÄ¶Á¡¢ÍæÊÖ»ú
+<p><b>çˆ±å¥½:</b></br>è·‘æ­¥ã€é˜…è¯»ã€çŽ©æ‰‹æœº
 </p>
-<p><b>ÐÔ¸ñ:</b></br>»îÆÃ²»Ê§ÈÈÇé¡¢°®¶¯Ò²°®¾²×ø¡¢²»¹»³ÉÊì¸üËã²»ÉÏÎÈÖØ
+<p><b>æ€§æ ¼:</b></br>æ´»æ³¼ä¸å¤±çƒ­æƒ…ã€çˆ±åŠ¨ä¹Ÿçˆ±é™åã€ä¸å¤Ÿæˆç†Ÿæ›´ç®—ä¸ä¸Šç¨³é‡
 </p>
-<p><b>ÏÖÔÚµÄÉú»î:</b></br>Ò»Ãû´óÑ§Éú£¬Ê±³£¸Ð¿®Éú»î²»ËÆÏëÏó£¬²»¹ýÒ²²¢Î´Òò´Ë¶øÏû³Á¡£ÓÐµãÀÁÉ¢¡¢ÓÐµã¹ýÓÚ°²ÒÝ£¬ÓÐÊ±²»Ãâ±§Ô¹£¬µ«×ÜÌå¶øÑÔ£¬ÊÇÒ»¸ö»ý¼«ÏòÉÏµÄ´óÄÐº¢£¬ÔÚÊôÓÚ×Ô¼ºµÄÇà´ºÄê»ªÀïÖð½¥³É³¤ÖÐ......
+<p><b>çŽ°åœ¨çš„ç”Ÿæ´»:</b></br>ä¸€åå¤§å­¦ç”Ÿï¼Œæ—¶å¸¸æ„Ÿæ…¨ç”Ÿæ´»ä¸ä¼¼æƒ³è±¡ï¼Œä¸è¿‡ä¹Ÿå¹¶æœªå› æ­¤è€Œæ¶ˆæ²‰ã€‚æœ‰ç‚¹æ‡’æ•£ã€æœ‰ç‚¹è¿‡äºŽå®‰é€¸ï¼Œæœ‰æ—¶ä¸å…æŠ±æ€¨ï¼Œä½†æ€»ä½“è€Œè¨€ï¼Œæ˜¯ä¸€ä¸ªç§¯æžå‘ä¸Šçš„å¤§ç”·å­©ï¼Œåœ¨å±žäºŽè‡ªå·±çš„é’æ˜¥å¹´åŽé‡Œé€æ¸æˆé•¿ä¸­......
 </p>
 </div>
 
