--- a/resume.html
+++ b/resume.html
@@ -1,6 +1,8 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:mso="urn:schemas-microsoft-com:office:office" xmlns:msdt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882" >
 <head>
+<meta charset="utf-8">
 <title>个人简介</title>
 <link rel="stylesheet" type="text/css" href="css/resume.css">	
 </head>
