--- a/university.html
+++ b/university.html
@@ -1,14 +1,16 @@
-<!DOCTYPE html>
+ï»¿<!DOCTYPE html>
 <html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:mso="urn:schemas-microsoft-com:office:office" xmlns:msdt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882" >
 <head>
-<title>ÎÒµÄ´óÑ§</title>
+<meta charset="utf-8">
+<title>æˆ‘çš„å¤§å­¦</title>
 <link rel="stylesheet" type="text/css" href="css/university.css">
 </head>
 <body>
-<div>ÎÒµÄ´óÑ§</div>
+<div>æˆ‘çš„å¤§å­¦</div>
 <p><img src="images/4.jpg" width="1000px"></p>
 
-<h1 style="text-align:center"><b>ÎÒ¿ó£¡¡ª¡ª¶«´óÃÅ</b></h1>
+<h1 style="text-align:center"><b>æˆ‘çŸ¿ï¼â€”â€”ä¸œå¤§é—¨</b></h1>
 
 <p>
 <img src="images/5.jpg" width="320px" >
@@ -16,7 +18,7 @@
 <img src="images/7.jpg" width="320px" >
 </p>
 
-<h1><b> &nbsp &nbsp &nbsp &nbsp &nbsp ¾µºş´ó½²ÌÃ &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Í¼Êé¹İ &nbsp &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp &nbspÀøÖ¾Ô° &nbsp</b></h1>
+<h1><b> &nbsp &nbsp &nbsp &nbsp &nbsp é•œæ¹–å¤§è®²å ‚ &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp å›¾ä¹¦é¦† &nbsp &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp &nbspåŠ±å¿—å›­ &nbsp</b></h1>
 
 <p>
 <img src="images/8.jpg" width="320px" >
@@ -24,7 +26,7 @@
 <img src="images/10.jpeg" width="320px" >
 </p>
 
-<h1><b> &nbsp &nbsp &nbsp &nbsp &nbsp ÔÚ°à¼¶ &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp ÔÚ²¿ÃÅ &nbsp &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp ÔÚËŞÉá &nbsp</b></h1>
+<h1><b> &nbsp &nbsp &nbsp &nbsp &nbsp åœ¨ç­çº§ &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp åœ¨éƒ¨é—¨ &nbsp &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp åœ¨å®¿èˆ &nbsp</b></h1>
 
 </body>
 
