--- a/music.html
+++ b/music.html
@@ -2,10 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <html>
 <head>
+<meta charset="utf-8">
 <title>我的音乐</title>
 <link rel="stylesheet" type="text/css" href="css/music.css">
 </head>
-
+<meta charset="utf-8">
 <body>
 <span>我喜爱的音乐</span>
 
