--- a/photos.html
+++ b/photos.html
@@ -1,16 +1,14 @@
-ï»¿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:mso="urn:schemas-microsoft-com:office:office" xmlns:msdt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882" >
 <head>
-<meta charset="utf-8">
-<title>æˆ‘çš„ç”Ÿæ´»ç…§</title>
+<title>ÎÒµÄÉú»îÕÕ</title>
 <link rel="stylesheet"  type="text/css" href="css/photos.css">
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/JavaScript" src="js/CloudCarousel.1.0.5.js"></script>
-<script type="text/JavaScript" src="js/jquery.mousewheel.js"></script><!--é¼ æ ‡æ»šåŠ¨æ’ä»¶-->
+<script type="text/JavaScript" src="js/jquery.mousewheel.js"></script><!--Êó±ê¹ö¶¯²å¼þ-->
 <script type="text/javascript">
 $(document).ready(function(){						   
-	// è¿™åˆå§‹åŒ–å®¹å™¨ä¸­æŒ‡å®šçš„å…ƒç´ ï¼Œåœ¨è¿™ç§æƒ…å†µä¸‹ï¼Œæ—‹è½¬æœ¨é©¬.
+	// Õâ³õÊ¼»¯ÈÝÆ÷ÖÐÖ¸¶¨µÄÔªËØ£¬ÔÚÕâÖÖÇé¿öÏÂ£¬Ðý×ªÄ¾Âí.
 	$("#carousel1").CloudCarousel({			
 		xPos:450,
 		yPos:110,
@@ -35,8 +33,8 @@ $(document).ready(function(){
 <body>
 <h2></h2>
 <div id="top">
-<span>æˆ‘çš„ç”Ÿæ´»ç…§</span>
-<p>*çˆ±ç¬‘çš„äººè¿æ°”éƒ½ä¸ä¼šå·®ï¼<br/>*çæƒœæ¯ä¸€ä¸ªä»Šå¤©ï¼Œåœ¨æˆ‘ä»¬è¿˜å¯ä»¥çœ‹åˆ°æ˜Žåªšçš„é˜³å…‰ã€å¬åˆ°é¸Ÿé¸£é£Žå£°ã€ç•…å¿«çš„å‘¼å¸ã€è‡ªç”±çš„ç”Ÿæ´»æ—¶ã€‚
+<span>ÎÒµÄÉú»îÕÕ</span>
+<p>*°®Ð¦µÄÈËÔËÆø¶¼²»»á²î£¡<br/>*ÕäÏ§Ã¿Ò»¸ö½ñÌì£¬ÔÚÎÒÃÇ»¹¿ÉÒÔ¿´µ½Ã÷ÃÄµÄÑô¹â¡¢Ìýµ½ÄñÃù·çÉù¡¢³©¿ìµÄºôÎü¡¢×ÔÓÉµÄÉú»îÊ±¡£
 </p>	
 </div>
 
@@ -44,12 +42,12 @@ $(document).ready(function(){
 <div id="carousel1">
   			<p id="title-text"></p>
   			<p id="alt-text"></p>
-  			<a target="_parent" ><img class="cloudcarousel"  src="images/21.jpg"/></a> 
+  			<a target="_parent" ><img class="cloudcarousel"  src="images/26.jpg"/></a> 
   			<a target="_parent" ><img class="cloudcarousel"  src="images/22.jpg"/></a>
   			<a target="_parent" ><img class="cloudcarousel"  src="images/23.jpg"/></a> 
   			<a target="_parent" ><img class="cloudcarousel"  src="images/24.jpg"/></a> 
   			<a target="_parent" ><img class="cloudcarousel"  src="images/25.jpg"/></a> 
-  			<a target="_parent" ><img class="cloudcarousel"  src="images/26.jpg"/></a> 
+  			<a target="_parent" ><img class="cloudcarousel"  src="images/21.jpg"/></a> 
  			<a target="_parent" ><img class="cloudcarousel"  src="images/27.jpg"/></a> 
   			<a target="_parent" ><img class="cloudcarousel"  src="images/28.jpg"/></a>
   		<div id="but1" class="carouselLeft"></div>
