--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
-ï»¿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:mso="urn:schemas-microsoft-com:office:office" xmlns:msdt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882" >
 <head>
-<meta charset="utf-8">
-<title>æ›¹åˆ©çº¯çš„ä¸ªäººä¸»é¡µ</title>
+<title>²ÜÀû´¿µÄ¸öÈËÖ÷Ò³</title>
 <link rel="stylesheet" type="text/css" href="css/index.css">	
 </head>
 
@@ -25,11 +23,11 @@
 	<tr>
 	<td>
 		<ul>
-		<li><a href="resume.html" target="target_area">ä¸ªäººç®€ä»‹</a></li>
-		<li><a href="university.html" target="target_area" >å¤§å­¦é£Žå…‰</a></li>
-		<li><a href="photos.html" target="target_area">ç”Ÿæ´»ç…§ç‰‡</a></li>
-		<li><a href="books.html" target="target_area">ä¹¦å•ä¹¦è¯„</a></li>
-		<li><a href="music.html" target="target_area">æˆ‘çš„éŸ³ä¹</a></li>
+		<li><a href="resume.html" target="target_area">¸öÈË¼ò½é</a></li>
+		<li><a href="university.html" target="target_area">´óÑ§·ç¹â</a></li>
+		<li><a href="photos.html" target="target_area">Éú»îÕÕÆ¬</a></li>
+		<li><a href="books.html" target="target_area">Êéµ¥ÊéÆÀ</a></li>
+		<li><a href="music.html" target="target_area">ÎÒµÄÒôÀÖ</a></li>
 		</ul>
 	</td>
 	<td><iframe id=target_area src="resume.html"></iframe></td>
@@ -40,9 +38,19 @@
 </div>
 
 <div id="bottom">
-	<p><strong>å¸¸ç”¨é“¾æŽ¥<strong> :  <a href="http://www.weibo.com/u/5611677111?refer_flag=1005050010_&is_hot=1" > æˆ‘çš„å¾®åš </a>| <a href="http://www.cumt.edu.cn" > æˆ‘çš„å¤§å­¦</a>  |  <a 	href="http://hao.360.cn" >360å¯¼èˆª</a>| <a href="http://www.baidu.com"> ç™¾åº¦</a> </p>	
-	<p>&copy;æ›¹åˆ©çº¯</p>
+	<p><strong>³£ÓÃÁ´½Ó<strong> :  <a href="http://www.weibo.com/u/5611677111?refer_flag=1005050010_&is_hot=1" > ÎÒµÄÎ¢²© </a>| <a href="http://www.cumt.edu.cn" > ÎÒµÄ´óÑ§</a>  |  <a 	href="http://hao.360.cn" >360µ¼º½</a>| <a href="http://www.baidu.com"> °Ù¶È</a> </p>	
+	<p>&copy;²ÜÀû´¿</p>
 </div>
-</body>
 
+<!--ÌáÇ°¼ÓÔØÖ®ºóµÄÍ¼Æ¬-->
+<div>
+<img src="images/21.jpg" width=0 height=0>
+<img src="images/22.jpg" width=0 height=0>
+<img src="images/23.jpg" width=0 height=0>
+<img src="images/24.jpg" width=0 height=0>
+<img src="images/25.jpg" width=0 height=0>
+<img src="images/26.jpg" width=0 height=0>
+</div>
+
+</body>
 </html>
