--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
-<!DOCTYPE html>
+ï»¿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <html>
 <head>
-<title>²ÜÀû´¿µÄ¸öÈËÖ÷Ò³</title>
+<meta charset="utf-8">
+<title>æ›¹åˆ©çº¯çš„ä¸ªäººä¸»é¡µ</title>
 <link rel="stylesheet" type="text/css" href="css/index.css">	
 </head>
 
@@ -23,11 +25,11 @@
 	<tr>
 	<td>
 		<ul>
-		<li><a href="resume.html" target="target_area">¸öÈË¼ò½é</a></li>
-		<li><a href="university.html" target="target_area">´óÑ§·ç¹â</a></li>
-		<li><a href="photos.html" target="target_area">Éú»îÕÕÆ¬</a></li>
-		<li><a href="books.html" target="target_area">Êéµ¥ÊéÆÀ</a></li>
-		<li><a href="music.html" target="target_area">ÎÒµÄÒôÀÖ</a></li>
+		<li><a href="resume.html" target="target_area">ä¸ªäººç®€ä»‹</a></li>
+		<li><a href="university.html" target="target_area">å¤§å­¦é£Žå…‰</a></li>
+		<li><a href="photos.html" target="target_area">ç”Ÿæ´»ç…§ç‰‡</a></li>
+		<li><a href="books.html" target="target_area">ä¹¦å•ä¹¦è¯„</a></li>
+		<li><a href="music.html" target="target_area">æˆ‘çš„éŸ³ä¹</a></li>
 		</ul>
 	</td>
 	<td><iframe id=target_area src="resume.html"></iframe></td>
@@ -38,11 +40,11 @@
 </div>
 
 <div id="bottom">
-	<p><strong>³£ÓÃÁ´½Ó<strong> :  <a href="http://www.weibo.com/u/5611677111?refer_flag=1005050010_&is_hot=1" > ÎÒµÄÎ¢²© </a>| <a href="http://www.cumt.edu.cn" > ÎÒµÄ´óÑ§</a>  |  <a 	href="http://hao.360.cn" >360µ¼º½</a>| <a href="http://www.baidu.com"> °Ù¶È</a> </p>	
-	<p>&copy;²ÜÀû´¿</p>
+	<p><strong>å¸¸ç”¨é“¾æŽ¥<strong> :  <a href="http://www.weibo.com/u/5611677111?refer_flag=1005050010_&is_hot=1" > æˆ‘çš„å¾®åš </a>| <a href="http://www.cumt.edu.cn" > æˆ‘çš„å¤§å­¦</a>  |  <a 	href="http://hao.360.cn" >360å¯¼èˆª</a>| <a href="http://www.baidu.com"> ç™¾åº¦</a> </p>	
+	<p>&copy;æ›¹åˆ©çº¯</p>
 </div>
 
-<!--ÌáÇ°¼ÓÔØÖ®ºóµÄÍ¼Æ¬-->
+<!--æå‰åŠ è½½ä¹‹åŽçš„å›¾ç‰‡-->
 <div>
 <img src="images/21.jpg" width=0 height=0>
 <img src="images/22.jpg" width=0 height=0>
