--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="keywords" content="曹利纯，利纯，湖南郴州，曹利纯的个人主页"/>
+<meta name="description" content="曹利纯的个人主页，曹利纯的空间，湖南郴州的曹利纯"/>
 <title>曹利纯的个人主页</title>
 <link rel="stylesheet" type="text/css" href="css/index.css">	
 </head>
